new changes in ui and css

--- a/contactus.html
+++ b/contactus.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body
@@ -51,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="time-wrapper">
+                    <div class="time-wrapper wow animate__animated animate__fadeInDown">
                         <div class="time-number">
                             <p class="text-white">24/7</p>
                         </div>
@@ -59,7 +60,7 @@
                             <p>Let's Work Together</p>
                         </div>
                     </div>
-                    <div class="section-title-two">
+                    <div class="section-title-two wow animate__animated animate__fadeInDown">
                         <h2 class="gradient-text text-center letter-spacing mt-3">Any Questions Rising?
                             We are All Here.s</h2>
                         <p class="text-center mt-3">
@@ -68,7 +69,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 wow animate__animated animate__fadeInDown">
                     <div class="contact-form-wrapper mt-5">
                          <form>
                             <div class="d-flex gap-2 mt-4 label-data">
@@ -111,7 +112,7 @@
                          </form>   
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 wow animate__animated animate__fadeInDown">
                     <div class="contact-card">
                         <div class="contact-item mt-5">
                           <div class="icon-title">
@@ -161,7 +162,7 @@
           <div class="row justify-content-between align-items-start">
             <!-- Subscribe Section -->
             <div class="col-md-6 mb-4">
-              <h6 class="mb-3 fw-semibold">Subscribe for Marketing Insights!</h6>
+              <h6 class="mb-3 fw-semibold  wow animate__animated animate__fadeInDown">Subscribe for Marketing Insights!</h6>
               <form class="d-flex form-data">
                 <input type="email" class="form-control" placeholder="Enter Your Email..." />
                 <button type="submit" class="btn btn-primary shadow-sm">Subscribe</button>
@@ -172,21 +173,21 @@
             <div class="col-md-5 mb-4">
               <div class="row">
                 <div class="col-6">
-                  <h6 class="fw-bold mb-3">Company</h6>
+                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
                   <ul class="list-unstyled">
-                    <li><a href="index.html" class="text-decoration-none  heading-line">Home</a></li>
-                    <li><a href="aboutus.html" class="text-decoration-none  heading-line">About</a></li>
-                    <li><a href="work.html" class="text-decoration-none  heading-line">Work</a></li>
-                    <li><a href="service.html" class="text-decoration-none  heading-line">Services</a></li>
-                    <li><a href="contactus.html" class="text-decoration-none  heading-line">Contact Us</a></li>
+                    <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
+                    <li><a href="aboutus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">About</a></li>
+                    <li><a href="work.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Work</a></li>
+                    <li><a href="service.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Services</a></li>
+                    <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
                   </ul>
                 </div>
                 <div class="col-6">
-                  <h6 class="fw-bold mb-3">Socials</h6>
+                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
                   <ul class="list-unstyled">
-                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line">LinkedIn</a></li>
+                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">LinkedIn</a></li>
                   </ul>
                 </div>
               </div>
@@ -195,7 +196,7 @@
       
           <!-- Copyright -->
           <div class="text-left border-top pt-3 pb-4">
-            <small class="text-muted heading-line">© 2025 Polyvalent Digital Services. All rights reserved.</small>
+            <small class="text-muted heading-line  wow animate__animated animate__fadeInDown">© 2025 Polyvalent Digital Services. All rights reserved.</small>
           </div>
         </div>
       </footer>
@@ -210,7 +211,11 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script>
+      new WOW().init(); // initialize WOW
+</script>
 </body>
 
 </html>
