--- a/service.html
+++ b/service.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -50,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                         <h2 class="gradient-text text-center letter-spacing" >Our Services</h2>  
+                         <h2 class="gradient-text text-center letter-spacing wow animate__animated animate__fadeInDown" >Our Services</h2>  
                     </div>
                 </div>
                 <div class="service-wrapper">
@@ -58,27 +59,27 @@
                           <div class="our-work-subwrapper">
                               <img src="assets/images/service1.png" alt="current-data" class="img-data-one"/>
                               <div class="our-work-content">
-                                  <a href="#" class="btn btn-one">Web Design</a>
-                                  <h5 class="fw-bold mt-2">Brand Promotion & Management</h5>
-                                  <p class="heading-line mt-2">We cultivate brand awareness and engagement while analyzing performance and encompassing social media marketing, media planning, and insightful analytics.</p>
+                                  <a href="#" class="btn btn-one wow animate__animated animate__fadeInDown">Web Design</a>
+                                  <h5 class="fw-bold mt-2 wow animate__animated animate__fadeInDown">Brand Promotion & Management</h5>
+                                  <p class="heading-line mt-2 wow animate__animated animate__fadeInDown">We cultivate brand awareness and engagement while analyzing performance and encompassing social media marketing, media planning, and insightful analytics.</p>
                               </div>
                           </div>
                       </div>  
                       <div class="service-right">
                             <div class="serive-badges">
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
@@ -88,19 +89,19 @@
                 <div class="service-wrapper">
                       <div class="service-right">
                         <div class="serive-badges">
-                            <div class="service-badge-wrapper">
+                            <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                 <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                 <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                             </div>
-                            <div class="service-badge-wrapper">
+                            <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                 <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                 <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                             </div>
-                            <div class="service-badge-wrapper">
+                            <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                 <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                 <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                             </div>
-                            <div class="service-badge-wrapper">
+                            <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                 <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                 <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                             </div>
@@ -110,9 +111,9 @@
                           <div class="our-work-subwrapper">
                               <img src="assets/images/service2.png" alt="current-data" class="img-data-one"/>
                               <div class="our-work-content">
-                                  <a href="#" class="btn btn-one">Web Design</a>
-                                  <h5 class="fw-bold mt-2">Brand Promotion & Management</h5>
-                                  <p class="heading-line mt-2">We cultivate brand awareness and engagement while analyzing performance and encompassing social media marketing, media planning, and insightful analytics.</p>
+                                  <a href="#" class="btn btn-one wow animate__animated animate__fadeInDown">Web Design</a>
+                                  <h5 class="fw-bold mt-2 wow animate__animated animate__fadeInDown">Brand Promotion & Management</h5>
+                                  <p class="heading-line mt-2 wow animate__animated animate__fadeInDown">We cultivate brand awareness and engagement while analyzing performance and encompassing social media marketing, media planning, and insightful analytics.</p>
                               </div>
                           </div>
                       </div> 
@@ -130,19 +131,19 @@
                       </div>  
                       <div class="service-right">
                             <div class="serive-badges">
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
-                                <div class="service-badge-wrapper">
+                                <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                                     <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                                 </div>
@@ -152,19 +153,19 @@
                 <div class="service-wrapper">
                   <div class="service-right">
                     <div class="serive-badges">
-                        <div class="service-badge-wrapper">
+                        <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                             <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                             <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                         </div>
-                        <div class="service-badge-wrapper">
+                        <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                             <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                             <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                         </div>
-                        <div class="service-badge-wrapper">
+                        <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                             <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                             <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                         </div>
-                        <div class="service-badge-wrapper">
+                        <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                             <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
                             <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
                         </div>
@@ -190,7 +191,7 @@
           <div class="row justify-content-between align-items-start">
             <!-- Subscribe Section -->
             <div class="col-md-6 mb-4">
-              <h6 class="mb-3 fw-semibold">Subscribe for Marketing Insights!</h6>
+              <h6 class="mb-3 fw-semibold  wow animate__animated animate__fadeInDown">Subscribe for Marketing Insights!</h6>
               <form class="d-flex form-data">
                 <input type="email" class="form-control" placeholder="Enter Your Email..." />
                 <button type="submit" class="btn btn-primary shadow-sm">Subscribe</button>
@@ -201,21 +202,21 @@
             <div class="col-md-5 mb-4">
               <div class="row">
                 <div class="col-6">
-                  <h6 class="fw-bold mb-3">Company</h6>
+                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
                   <ul class="list-unstyled">
-                    <li><a href="index.html" class="text-decoration-none  heading-line">Home</a></li>
-                    <li><a href="aboutus.html" class="text-decoration-none  heading-line">About</a></li>
-                    <li><a href="work.html" class="text-decoration-none  heading-line">Work</a></li>
-                    <li><a href="service.html" class="text-decoration-none  heading-line">Services</a></li>
-                    <li><a href="contactus.html" class="text-decoration-none  heading-line">Contact Us</a></li>
+                    <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
+                    <li><a href="aboutus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">About</a></li>
+                    <li><a href="work.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Work</a></li>
+                    <li><a href="service.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Services</a></li>
+                    <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
                   </ul>
                 </div>
                 <div class="col-6">
-                  <h6 class="fw-bold mb-3">Socials</h6>
+                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
                   <ul class="list-unstyled">
-                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line">LinkedIn</a></li>
+                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">LinkedIn</a></li>
                   </ul>
                 </div>
               </div>
@@ -224,7 +225,7 @@
       
           <!-- Copyright -->
           <div class="text-left border-top pt-3 pb-4">
-            <small class="text-muted heading-line">© 2025 Polyvalent Digital Services. All rights reserved.</small>
+            <small class="text-muted heading-line  wow animate__animated animate__fadeInDown">© 2025 Polyvalent Digital Services. All rights reserved.</small>
           </div>
         </div>
       </footer>
@@ -240,6 +241,10 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script>
+            new WOW().init(); // initialize WOW
+    </script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const serviceLeft = document.querySelector(".service-left");
