--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -46,15 +47,20 @@
    
     <!-- nav section end -->
         <!-- about us section start -->
-         <section class="section-padding aboutus-wrapper">
+         <section class="section-padding aboutus-wrapper  wow animate__animated animate__fadeInDown">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                          <h2 class="gradient-text text-center letter-spacing" >About Polyvalent Digital Services</h2>       
-                         <div class="mt-3" style="pointer-events: none;">
+                         <!-- <div class="mt-3" style="pointer-events: none;">
                             <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
                             <spline-viewer url="https://prod.spline.design/awNKKnPnYjomTXdv/scene.splinecode"></spline-viewer>
-                         </div>
+                         </div> -->
+                         <div class="position-relative" style="pointer-events: none;">
+                          <div class="scroll-layer" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 10;"></div>
+                          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.86/build/spline-viewer.js"></script>
+                          <spline-viewer url="https://prod.spline.design/06xwhcsmGsFWSMR3/scene.splinecode"></spline-viewer>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -66,7 +72,7 @@
           <div class="row justify-content-between align-items-start">
             <!-- Subscribe Section -->
             <div class="col-md-6 mb-4">
-              <h6 class="mb-3 fw-semibold">Subscribe for Marketing Insights!</h6>
+              <h6 class="mb-3 fw-semibold  wow animate__animated animate__fadeInDown">Subscribe for Marketing Insights!</h6>
               <form class="d-flex form-data">
                 <input type="email" class="form-control" placeholder="Enter Your Email..." />
                 <button type="submit" class="btn btn-primary shadow-sm">Subscribe</button>
@@ -77,21 +83,21 @@
             <div class="col-md-5 mb-4">
               <div class="row">
                 <div class="col-6">
-                  <h6 class="fw-bold mb-3">Company</h6>
+                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
                   <ul class="list-unstyled">
-                    <li><a href="index.html" class="text-decoration-none  heading-line">Home</a></li>
-                    <li><a href="aboutus.html" class="text-decoration-none  heading-line">About</a></li>
-                    <li><a href="work.html" class="text-decoration-none  heading-line">Work</a></li>
-                    <li><a href="service.html" class="text-decoration-none  heading-line">Services</a></li>
-                    <li><a href="contactus.html" class="text-decoration-none  heading-line">Contact Us</a></li>
+                    <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
+                    <li><a href="aboutus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">About</a></li>
+                    <li><a href="work.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Work</a></li>
+                    <li><a href="service.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Services</a></li>
+                    <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
                   </ul>
                 </div>
                 <div class="col-6">
-                  <h6 class="fw-bold mb-3">Socials</h6>
+                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
                   <ul class="list-unstyled">
-                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line">LinkedIn</a></li>
+                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">LinkedIn</a></li>
                   </ul>
                 </div>
               </div>
@@ -100,7 +106,7 @@
       
           <!-- Copyright -->
           <div class="text-left border-top pt-3 pb-4">
-            <small class="text-muted heading-line">© 2025 Polyvalent Digital Services. All rights reserved.</small>
+            <small class="text-muted heading-line  wow animate__animated animate__fadeInDown">© 2025 Polyvalent Digital Services. All rights reserved.</small>
           </div>
         </div>
       </footer>
@@ -116,7 +122,10 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
- 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script>
+            new WOW().init(); // initialize WOW
+    </script>
     
 </body>
 
