--- a/index.html
+++ b/index.html
@@ -772,13 +772,27 @@
                 prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-arrow-left"></i></button>',
                 nextArrow: '<button type="button" class="slick-next"><i class="fas fa-arrow-right"></i></button>',
                 responsive: [
-                    {
-                        breakpoint: 768,
-                        settings: {
-                            slidesToShow: 1,
-                            arrows: false,
-                        }
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        arrows: true
                     }
+                },
+                {
+                    breakpoint: 768,
+                    settings: {
+                        slidesToShow: 2,
+                        arrows: false
+                    }
+                },
+                {
+                    breakpoint: 480, // More realistic than 320
+                    settings: {
+                        slidesToShow: 1,
+                        arrows: false
+                    }
+                }
                 ]
             });
         });
