new add the data

--- a/index.html
+++ b/index.html
@@ -285,7 +285,10 @@
                                 digital experiences
                             </p>
                             <div class="workspace-wrapper">
-
+                                <a href="service.html">
+                                    <img src="assets/images/service1.png" alt="current-data" style="border-radius: 20px;"/>
+                                </a>
+                               
                             </div>
                             <h5 class="mt-4 fw-bold  wow animate__animated animate__fadeInDown">Our Creative Workspace</h5>
                         </div>
