--- a/aboutus.html
+++ b/aboutus.html
@@ -144,82 +144,82 @@
                               <div class="client-section">
                                   <div class="client-section-wrapper">
                                     <div>
-                                      <img src="assets/images/Lenovo_Global.png" alt="current-data"/>
+                                      <img src="assets/images/Lenovo_Global.png" alt="current-data" class="width-90"/>
                                     </div>
                                     <div>
-                                      <img src="assets/images/Frame 37214.png" alt="current-data"/>
-                                    </div>
-                                  </div>
-                                  <div class="client-section-wrapper">
-                                    <div>
-                                      <img src="assets/images/Dell_Logo 1.png" alt="current-data"/>
-                                    </div>
-                                    <div>
-                                      <img src="assets/images/client4.png" alt="current-data"/>
+                                      <img src="assets/images/Frame 37214.png" alt="current-data" class="width-90"/>
                                     </div>
                                   </div>
                                   <div class="client-section-wrapper">
                                     <div>
-                                      <img src="assets/images/client5.png" alt="current-data"/>
+                                      <img src="assets/images/Dell_Logo 1.png" alt="current-data" class="width-90"/>
                                     </div>
                                     <div>
-                                      <img src="assets/images/client6.png" alt="current-data"/>
-                                    </div>
-                                  </div>
-                                  <div class="client-section-wrapper">
-                                    <div>
-                                      <img src="assets/images/Abbott_Laboratories_logo 1.png" alt="current-data"/>
-                                    </div>
-                                    <div>
-                                      <img src="assets/images/Mercedes-Benz_Logo_2010 1.png" alt="current-data"/>
+                                      <img src="assets/images/client4.png" alt="current-data" class="width-90"/>
                                     </div>
                                   </div>
                                   <div class="client-section-wrapper">
                                     <div>
-                                      <img src="assets/images/Frame 37214 (1).png" alt="current-data"/>
+                                      <img src="assets/images/client5.png" alt="current-data" class="width-90"/>
                                     </div>
                                     <div>
-                                      <img src="assets/images/Frame 37218.png" alt="current-data"/>
-                                    </div>
-                                  </div>
-                                  <div class="client-section-wrapper">
-                                    <div>
-                                      <img src="assets/images/Frame 37215.png" alt="current-data"/>
-                                    </div>
-                                    <div>
-                                      <img src="assets/images/Optimum Nutrition 1.png" alt="current-data"/>
+                                      <img src="assets/images/client6.png" alt="current-data" class="width-90"/>
                                     </div>
                                   </div>
                                   <div class="client-section-wrapper">
                                     <div>
-                                      <img src="assets/images/Toyota_logo_(Red) 1.png" alt="current-data"/>
+                                      <img src="assets/images/Abbott_Laboratories_logo 1.png" alt="current-data" class="width-90"/>
                                     </div>
                                     <div>
-                                      <img src="assets/images/alpi.png" alt="current-data"/>
-                                    </div>
-                                  </div>
-                                  <div class="client-section-wrapper">
-                                    <div>
-                                      <img src="assets/images/Jeep_logo 1.png" alt="current-data"/>
-                                    </div>
-                                    <div>
-                                      <img src="assets/images/Bata 1.png" alt="current-data"/>
+                                      <img src="assets/images/Mercedes-Benz_Logo_2010 1.png" alt="current-data" class="width-90"/>
                                     </div>
                                   </div>
                                   <div class="client-section-wrapper">
                                     <div>
-                                      <img src="assets/images/Samsung_Logo 1.png" alt="current-data"/>
+                                      <img src="assets/images/Frame 37214 (1).png" alt="current-data" class="width-90"/>
                                     </div>
                                     <div>
-                                      <img src="assets/images/break.png" alt="current-data"/>
+                                      <img src="assets/images/Frame 37218.png" alt="current-data" class="width-90"/>
                                     </div>
                                   </div>
                                   <div class="client-section-wrapper">
                                     <div>
-                                      <img src="assets/images/Citi_logo_March_2023 1.png" alt="current-data"/>
+                                      <img src="assets/images/Frame 37215.png" alt="current-data" class="width-90"/>
                                     </div>
                                     <div>
-                                      <img src="assets/images/woxvogan.png" alt="current-data"/>
+                                      <img src="assets/images/Optimum Nutrition 1.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                  </div>
+                                  <div class="client-section-wrapper">
+                                    <div>
+                                      <img src="assets/images/Toyota_logo_(Red) 1.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                    <div>
+                                      <img src="assets/images/alpi.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                  </div>
+                                  <div class="client-section-wrapper">
+                                    <div>
+                                      <img src="assets/images/Jeep_logo 1.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                    <div>
+                                      <img src="assets/images/Bata 1.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                  </div>
+                                  <div class="client-section-wrapper">
+                                    <div>
+                                      <img src="assets/images/Samsung_Logo 1.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                    <div>
+                                      <img src="assets/images/break.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                  </div>
+                                  <div class="client-section-wrapper">
+                                    <div>
+                                      <img src="assets/images/Citi_logo_March_2023 1.png" alt="current-data" class="width-90"/>
+                                    </div>
+                                    <div>
+                                      <img src="assets/images/woxvogan.png" alt="current-data" class="width-90"/>
                                     </div>
                                   </div>
                       
