--- a/aboutus.html
+++ b/aboutus.html
@@ -48,7 +48,7 @@
     <!-- nav section end -->
         <!-- about us section start -->
          <section class="section-padding aboutus-wrapper  wow animate__animated animate__fadeInDown about-desktop">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
                          <h2 class="gradient-text text-center letter-spacing" >About Polyvalent Digital Services</h2>       
