--- a/contactus.html
+++ b/contactus.html
@@ -171,8 +171,8 @@
       
             <!-- Links Section -->
             <div class="col-md-5 mb-4">
-              <div class="row">
-                <div class="col-6">
+              <div class="" style="display: flex; justify-content: flex-end; gap: 105px;">
+                <div class="">
                   <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
                   <ul class="list-unstyled">
                     <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
@@ -182,7 +182,7 @@
                     <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
                   </ul>
                 </div>
-                <div class="col-6">
+                <div class="">
                   <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
                   <ul class="list-unstyled">
                     <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
