--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </section>
     <!-- robot section end -->
     <!-- why section start -->
-    <section class="section-padding margin-30 section-data">
+    <section class="section-padding margin-30 section-data pt-0 pb-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -223,13 +223,13 @@
                     </div>
                     <h4 class="fw-normal text-center why-content wow animate__animated animate__fadeInDown">
                         Polyvalent is a leading marketing agency with a proven track record of delivering innovative and
-                        effective campaigns. <span class="c">We specialize in helping brands achieve their marketing
+                        effective campaigns. <span class="heading-line">We specialize in helping brands achieve their marketing
                             goals through creative strategies, data-driven insights, and cutting-edge technology.</span>
                     </h4>
                 </div>
-                <div class="row p-4 mt-3">
+                <div class="row p-4" style="margin-top: 60px;">
                     <div class="col-lg-6">
-                        <h6 class="wow animate__animated animate__fadeInDown">Be Part of Our Journey</h6>
+                        <h6 class="wow animate__animated animate__fadeInDown fw-bold">Be Part of Our Journey</h6>
                         <p class="heading-line wow animate__animated animate__fadeInDown">
                             Polyvalent is a leading marketing agency with a proven track record of delivering innovative
                             and effective campaigns. We specialize in helping brands achieve their marketing goals
@@ -240,15 +240,15 @@
                         <div
                             class="d-flex justify-content-between align-items-center align-self-center mt-3 counter-data wow animate__animated animate__fadeInDown">
                             <div>
-                                <h3 class="fw-normal mb-0 wow animate__animated animate__fadeInDown">₹ 100Cr<span class="primary-color">+</span></h3>
+                                <h3 class="fw-normal mb-0 wow animate__animated animate__fadeInDown fw-bold">₹ 100Cr<span class="primary-color">+</span></h3>
                                 <p class="heading-line">in Revenue Generated</p>
                             </div>
                             <div>
-                                <h3 class="fw-normal mb-0 wow animate__animated animate__fadeInDown"> 30Cr<span class="primary-color">+</span></h3>
+                                <h3 class="fw-normal mb-0 wow animate__animated animate__fadeInDown fw-bold"> 30Cr<span class="primary-color">+</span></h3>
                                 <p class="heading-line">Database</p>
                             </div>
                             <div>
-                                <h3 class="fw-normal mb-0 wow animate__animated animate__fadeInDown">50Cr<span class="primary-color">+</span></h3>
+                                <h3 class="fw-normal mb-0 wow animate__animated animate__fadeInDown fw-bold">50Cr<span class="primary-color">+</span></h3>
                                 <p class="heading-line">iProfessional Teams</p>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
     </section>
     <!-- why section end -->
     <!-- service section start -->
-    <section class="section-padding margin-30 section-data">
+    <section class="section-padding margin-30 section-data pt-5">
         <div class="container">
             <div class="rows">
                 <div class="col-lg-12">
@@ -412,7 +412,7 @@
     </section>
     <!-- service section end -->
     <!-- portfolio section start -->
-    <section class="section-padding margin-30 section-data">
+    <section class="section-padding margin-30 section-data pt-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
@@ -517,10 +517,10 @@
     <div class="container">
         <div class="mid-section-wrapper">
             <div class="mid-subwrapper">
-                <h4 class="text-center text-white mt-4  wow animate__animated animate__fadeInDown">Looking to enhance your Search Experience?</h4>
+                <h1 class="text-center text-white mt-4  wow animate__animated animate__fadeInDown mid-shape-one">Looking to enhance your Search Experience?</h1>
                 <p class="text-center text-white mt-2  wow animate__animated animate__fadeInDown">Our digital analysis are looking out for you!</p>
                 <form>
-                    <div class="form-wrapper mt-4">
+                    <div class="form-wrapper " style="margin-top: 30px;">
                         <div>
                             <input type="text" class="form-control url-data" placeholder="Type in your Website URL" />
                         </div>
@@ -558,7 +558,7 @@
 
     <!-- mid section two start -->
     <!-- client section start -->
-    <section class="section-padding margin-30 section-data client-section">
+    <section class="section-padding margin-30 section-data client-section pt-3">
         <div class="container">
             <div class="row">
 
@@ -721,8 +721,8 @@
       
             <!-- Links Section -->
             <div class="col-md-5 mb-4">
-              <div class="row">
-                <div class="col-6">
+              <div class="" style="display: flex; justify-content: flex-end; gap: 105px;">
+                <div class="">
                   <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
                   <ul class="list-unstyled">
                     <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
@@ -732,7 +732,7 @@
                     <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
                   </ul>
                 </div>
-                <div class="col-6">
+                <div class="">
                   <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
                   <ul class="list-unstyled">
                     <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
@@ -750,7 +750,6 @@
           </div>
         </div>
       </footer>
-      
       <!-- footer section end -->
     <!-- cursoer code start here -->
     <div class="custom-cursor"></div>
