--- a/workdetail.html
+++ b/workdetail.html
@@ -66,7 +66,7 @@
          </section>
         <!-- about us section end -->
       <!-- footer section start -->
-        <footer class="section-data pt-5">
+      <footer class="section-data pt-5">
         <div class="container">
           <div class="row justify-content-between align-items-start">
             <!-- Subscribe Section -->
@@ -80,8 +80,8 @@
       
             <!-- Links Section -->
             <div class="col-md-5 mb-4">
-              <div class="row">
-                <div class="col-6">
+              <div class="" style="display: flex; justify-content: flex-end; gap: 105px;">
+                <div class="">
                   <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
                   <ul class="list-unstyled">
                     <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
@@ -91,7 +91,7 @@
                     <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
                   </ul>
                 </div>
-                <div class="col-6">
+                <div class="">
                   <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
                   <ul class="list-unstyled">
                     <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
@@ -109,6 +109,7 @@
           </div>
         </div>
       </footer>
+      
       <!-- footer section end -->
     <!-- cursoer code start here -->
     <div class="custom-cursor"></div>
