--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,7 @@
                             <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
                             <spline-viewer url="https://prod.spline.design/awNKKnPnYjomTXdv/scene.splinecode"></spline-viewer>
                          </div> -->
-                         <div class="position-sticky">
+                         <div class="position-sticky mt-5">
                           <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.86/build/spline-viewer.js"></script>
                           <spline-viewer id="splineScroll" url="https://prod.spline.design/06xwhcsmGsFWSMR3/scene.splinecode"></spline-viewer>
                         </div>
@@ -231,54 +231,7 @@
             </div>
           </section>
          <!-- about mobile section end -->
-      <!-- footer section start -->
-      <footer class="section-data pt-5">
-        <div class="container">
-          <div class="row justify-content-between align-items-start">
-            <!-- Subscribe Section -->
-            <div class="col-md-6 mb-4">
-              <h6 class="mb-3 fw-semibold  wow animate__animated animate__fadeInDown">Subscribe for Marketing Insights!</h6>
-              <form class="d-flex form-data">
-                <input type="email" class="form-control" placeholder="Enter Your Email..." />
-                <button type="submit" class="btn btn-primary shadow-sm">Subscribe</button>
-              </form>
-            </div>
-      
-            <!-- Links Section -->
-            <div class="col-md-5 mb-4">
-              <div class="" style="display: flex; justify-content: flex-end; gap: 105px;">
-                <div class="">
-                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Company</h6>
-                  <ul class="list-unstyled">
-                    <li><a href="index.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Home</a></li>
-                    <li><a href="aboutus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">About</a></li>
-                    <li><a href="work.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Work</a></li>
-                    <li><a href="service.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Services</a></li>
-                    <li><a href="contactus.html" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Contact Us</a></li>
-                  </ul>
-                </div>
-                <div class="">
-                  <h6 class="fw-bold mb-3  wow animate__animated animate__fadeInDown">Socials</h6>
-                  <ul class="list-unstyled">
-                    <li><a href="https://www.facebook.com/polyvalentdigitalservices/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/polyvalentdigital/" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/polyvalent-digital-services/posts/?feedView=all" class="text-decoration-none  heading-line  wow animate__animated animate__fadeInDown">LinkedIn</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-      
-          <!-- Copyright -->
-          <div class="text-left border-top pt-3 pb-4">
-            <small class="text-muted heading-line  wow animate__animated animate__fadeInDown">© 2025 Polyvalent Digital Services. All rights reserved.</small>
-          </div>
-        </div>
-      </footer>
-      <!-- footer section end -->
-    <!-- cursoer code start here -->
-    <div class="custom-cursor"></div>
-    <!-- cursoer code end here -->
+ 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
