new add change in ui

--- a/service.html
+++ b/service.html
@@ -79,12 +79,12 @@
                       <div class="service-right">
                             <div class="serive-badges">
                                 <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
-                                    <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
-                                    <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
+                                    <a href="#" class="btn btn-primary text-white rounded-pill">Brand Audit & Competitor Analysis</a>
+                                    <!-- <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p> -->
                                 </div>
                                 <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
-                                    <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
-                                    <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p>
+                                    <a href="#" class="btn btn-primary text-white rounded-pill">Target Audience Profiling</a>
+                                    <!-- <p>We establish and strengthen a brand's digital presence and reputation, along with utilizing SEO and reputation management to enhance online visibility.</p> -->
                                 </div>
                                 <div class="service-badge-wrapper wow animate__animated animate__fadeInDown">
                                     <a href="#" class="btn btn-primary text-white rounded-pill">One Brand Positioning</a>
